--- a/src/Projects.html
+++ b/src/Projects.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
+    </head>
     <title>Projects</title>
-    <body>
-        <div>
-            <h3>&#47; Project 1: Iris Flower classification</h3>
+    <body class="hero is-fullheight has-background-black has-text-white">
+        <div class="navbar is-flex is-justify-content-flex-end">
+            <div class="is-flex">
+              <div class="column">
+                <button>
+                  <a class="nav " href="Home.html">Home</a>
+                </button>
+              </div>
+              <div class="column">
+                <button>
+                <a class="nav" href="Resume.html">Resume</a>
+                </button>
+              </div>
+              <div class="column">
+                <button>
+                  <a class="nav" href="PersonalProfile.html">PP</a>
+                </button>
+              </div>
+              <div class="column">
+                <button>
+                    <a class="has-text-centered" href="Projects.html">Projects</a>
+                </button>
+              </div>
+            </div>
+          
+    
+    </div>
+        <div class="box has-white-border has-background-black has-text-white mt-4">
+            <h3 class="is-size-4 has-text-weight-bold">&#47; Project 1: Iris Flower classification</h3>
             <p>The Iris Flower Classification project is a popular data science project that involves the classification of Iris flowers based on their various attributes. The dataset used in this project contains measurements of four features: sepal length, sepal width, petal length, and petal width, for three different species of Iris flowers: setosa, versicolor, and virginica.
 
                 The goal of the project is to build a machine learning model that can accurately classify an Iris flower based on its feature measurements. This involves training the model with the provided dataset, which includes labeled examples of Iris flowers, and then using the trained model to predict the species of new, unseen Iris flowers.</p>
-            <video controls>
+            <video class="project1__video1" controls>
                 <source src="images/Iris_Flower_Classification_Project.ipynb - Colaboratory - Google Chrome 2023-09-04 00-01-15.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video>
         </div>
-        <div>
-            <h3>&#47; Project 2: Car Price Prediction</h3>
+        <div class="box has-white-border has-background-black has-text-white">
+            <h3 class="is-size-4 has-text-weight-bold">&#47; Project 2: Car Price Prediction</h3>
             <p>The Car Price Prediction data science project involves building a model to predict the price of used cars based on various features and attributes. The dataset used in this project typically includes information such as the car's brand, model, year of manufacture, mileage, fuel type, transmission type, and other relevant factors.
 
                 The goal of this project is to develop a machine learning model that can accurately estimate the price of a car based on its features. This involves training the model using historical data with labeled car prices and then using the trained model to predict the price of new or unseen cars.</p>
-            <video controls>
-                <source src="images/Iris_Flower_Classification_Project.ipynb - Colaboratory - Google Chrome 2023-09-04 00-01-15.mp4" type="video/mp4">
+            <video class="project2__video2" controls>
+                <source src="images/Car_Price_Prediction_Project.ipynb - Colaboratory - Google Chrome 2023-09-04 11-38-57.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video>
         </div>
-        <footer>
-            <a href="/Home.html">Home</a>
-            <a href="/Contact.html">Contact</a> 
-            <a href="/Resume.html">Resume</a>
-            <a href="/PersonalProfile.html">PP</a>
-        </footer>
+        <div class="has-background-black is-flex is-justify-content-center">
+            <footer>
+                <a class="a1 mr-2 is-underlined is-size-5 has-text-weight-bold" href="Home.html">Home</a>
+                <a class="a2 mr-2 is-underlined is-size-5 has-text-weight-bold" href="Contact.html">Contact</a> 
+                <a class="a3 mr-2 is-underlined is-size-5 has-text-weight-bold" href="Resume.html">Resume</a>
+                <a class="a4 is-underlined is-size-5 has-text-weight-bold" href="PersonalProfile.html">PP</a>
+            </footer>
+        </div>
     </body>
 </html>
