--- a/src/Home.html
+++ b/src/Home.html
@@ -13,7 +13,7 @@
             <div class="is-flex">
               <div class="column">
                 <button>
-                  <a class="nav " href="Home.html">Home</a>
+                  <a class="nav " href="Contact.html">Contact</a>
                 </button>
               </div>
               <div class="column">
